--- a/react-socketio-tic-tac-toe-master/react-client/src/Table/Table.css
+++ b/react-socketio-tic-tac-toe-master/react-client/src/Table/Table.css
@@ -1,1 +1,67 @@
+.Table{
+  overflow: auto;
+}
 
+.MuiTableRow-root > * {
+  padding: 10px;
+}
+
+.MuiTableRow-root.MuiTableRow-head > * {
+  font-weight: bold !important;
+}
+
+.Table td,
+th {
+  border: none !important;
+}
+
+.Table:first-child {
+  border-radius: 0.7rem !important;
+}
+.status {
+  padding: 8px;
+  border-radius: 9px;
+}
+
+.Details {
+  color: #00b5ff !important;
+}
+.image1{
+  height: 70px;
+  width: 70px;
+}
+
+@media screen and (max-width: 1200px) {
+  .Table {
+    width: 170%;
+    margin-top: 2rem;
+  }
+}
+
+
+@media screen and (max-width: 71px) {
+  .Table{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 23rem;
+  }
+}
+
+
+.delbtnnadmin{
+  padding: 10px;
+  position: relative;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+}
+
+.delete{
+  padding: 10px;
+  border: none;
+  border-radius: 25px;
+  position: relative;
+  top: 45px;
+}
